--- a/dashboard.html
+++ b/dashboard.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="dist/styles/app.css">
     <body class="theme-default" id="index">
       <div id="wrapper">
-        <nav class="header">
+        <header class="header">
           <div class="navbar-header">
-            <h1 id="brand"><a href="./dashboard.html">SAITT</a></h1>
+            <nav class="nav"><a class="btn btn-link sidebartoggler hamburger hamburger--spin nav-link" id="sidebartoggler" href="#"><span class="hamburger-box"><span class="hamburger-inner"></span></span></a><a class="nav-link" href="./dashboard.html">
+                <h1>SAITT</h1></a><a class="nav-link btn btn-link" href="#"><i class="fas fa-ellipsis-h"></i></a></nav>
           </div>
-          <button class="btn btn-link sidebartoggler hamburger hamburger--spin" id="sidebartoggler" type="button"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
           <ul class="nav ml-auto">
             <li class="nav-item dropdown notifications new"><a class="nav-link" href="" data-toggle="dropdown" aria-expanded="false"><i class="far fa-bell"></i><sup><span class="badge badge-secondary">8</span></sup></a>
               <div class="dropdown-menu"><a class="dropdown-item active" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a></div>
@@ -28,7 +28,7 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-cogs"></i></a></li>
           </ul>
-        </nav>
+        </header>
         <section id="content">
           <nav class="main-nav" id="sidebar">
             <div class="user-profile">
